Add demo setup system with auto-reset functionality and comprehensive documentation

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
+    "demo:setup": "node scripts/setup-demo.js",
+    "demo:reset": "node scripts/setup-demo.js reset",
+    "demo:start": "npm run demo:setup && npm run dev",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
